# Speller

./: .gitignore  AVL.cpp  AVL.h  CMakeLists.txt  Checker.cpp  HashTable.h  README.md  VectorChecker.cpp  output_alice.txt
output/: README.md
src/headers/: Checker.h  HashMapChecker.h  VectorChecker.h
src/sources/: AVL.cpp  Checker.cpp  HashMapChecker.cpp  HashTable.cpp  VectorChecker.cpp  main.cpp
